--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                     id="add-layer"><i class="mdi mdi-layers-plus" aria-hidden="true"></i></button>
                 <button class="btn btn-middle btn-manage-layer btn-danger" title="Remover camada" id="delete-layer"><i
                         class="mdi mdi-layers-remove" aria-hidden="true"></i></button>
-                <button class="btn btn-right btn-manage-layer btn-info" title="Duplicar camada"
+                <button class="btn btn-right btn-manage-layer btn-secondary" title="Duplicar camada"
                     id="duplicate-layer"><i class="mdi mdi-layers-triple" aria-hidden="true"></i></button>
             </div>
 
