--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
                 <button id="redo" title="Refazer" disabled class="btn btn-xsmall btn-right-round disabled"><span
                         class="mdi mdi-arrow-u-right-top"></span></button>
             </div>
-            <button id="open-layers-btn" title="Camadas"
-            class="btn-mini"><span class="mdi mdi-layers"></span></button>
+            <div>
+                <button id="open-layers-btn" title="Camadas"
+                class="btn-mini"><span class="mdi mdi-layers"></span></button>
+            </div>
+       
         </div>
         <div class="wrapper">
             <div class="teste"></div>
