--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="logo">
                 <img  src="images/logo.png" id="project-title" class="project-title"></img>
             </div>            
-            <div>
+            <div class="undo-redo" id="undo-redo">
                 <button id="undo" title="Desfazer" disabled class="btn btn-xsmall btn-left-round disabled"><span
                         class="mdi mdi-arrow-u-left-top"></span></button>
                 <button id="redo" title="Refazer" disabled class="btn btn-xsmall btn-right-round disabled"><span
