--- a/index.html
+++ b/index.html
@@ -78,24 +78,16 @@
             <div class="preview-img" id="preview">
                 <div class="editor zoom" id="stage-parent">
                     <div class="" id="container">
-
-
+                        
                     </div>
                 </div>
             </div>
-
-
             <textarea wrap="off" style="display:none;" id="input-text-edit"></textarea>
-
-            <br>
-            <br>
-            <br>
-
         </div>
 
-        <div class="row2">
+        <div class="footer">
             <div class="project-info" id="resize-stage-prompt-btn">
-                <span class="mdi mdi-resize" style="color:#FFD843; margin-left:5px; font-size: 22px;"></span>
+                <span class="mdi mdi-resize" style="color:#FFD843; margin-left:5px; font-size: 16px;"></span>
                 <span id="project-info">800 x 600</span>
             </div>
             <button id="download" title="Exportar"
